--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 
       try {
         // 3.1 拼接你的 Vercel 后端代理地址
-        //    将 YOUR_VERCEL_DOMAIN 替换成你自己的域名，例如 "my-vercel-proxy.vercel.app"
-        const proxyUrl = `https://YOUR_VERCEL_DOMAIN/api/proxy?walletAddress=${address}`;
+        //     这里替换成你自己的域名
+        const proxyUrl = `https://ppppllll-7ccccc21xs-projects.vercel.app/api/proxy?walletAddress=${address}`;
 
         // 3.2 发起请求
         const response = await fetch(proxyUrl, { method: "GET" });
